# koz

./: .env  Cargo.toml  docker-compose.yml  package-lock.json
.cargo/: config.toml
config/dev/nginx.conf.d/: default.conf  dhparam.pem  nginx-selfsigned.crt  nginx-selfsigned.key  ssl-params.conf
config/dev/pgsql.conf.d/schema/: 001-init.sql
crates/ingest/src/: lib.rs
crates/koz/: Cargo.toml
crates/koz-ingest/: Cargo.toml
crates/koz-ingest/src/: lib.rs  task_runner.rs
crates/koz-ingest/src/lol/: region.rs
crates/koz-storage/: Cargo.toml
crates/koz-storage/src/: lib.rs  misc.rs  scheduled_task.rs
crates/koz-types/: Cargo.toml
crates/koz-types/src/: lol.rs
crates/koz-web/: Cargo.toml
crates/koz-web/src/: lib.rs
crates/koz/src/: config.rs  main.rs
crates/swain/: Cargo.toml
crates/swain/src/: client.rs  dto.rs  error.rs  lib.rs  rate_limit.rs  request.rs
crates/swain/src/request/: riot.rs
prisma/: schema.prisma
prisma/migrations/20241103150042_init/: migration.sql
prisma/migrations/20241103150156_riot_account_history_trigger/: migration.sql
prisma/migrations/20241103152726_lol_summoner_profile_history_trigger/: migration.sql
prisma/migrations/20241103153959_lol_summoner_rank_history_trigger/: migration.sql
scripts/: generate-self-signed-certs  reset.sh  runner  wait-for-exit.sh
