[package]
name = "koz-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
axum = { version = "0.7.7", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing"] }
koz-storage = { version = "0.1.0", path = "../koz-storage" }
tokio = { version = "1.41.0", default-features = false, features = ["net"] }
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes"] }
